--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "veld_data_19_mara_models"]
-	path = veld_data_19_mara_models
-	url = https://gitlab.oeaw.ac.at/acdh-ch/nlp/veld_data_19_mara_models.git
-[submodule "veld_code_11_publish_to_hf"]
-	path = veld_code_11_publish_to_hf
-	url = https://github.com/acdh-oeaw/veld_code_11_publish_to_hf.git
+[submodule "code/veld_code__spacy"]
+	path = code/veld_code__spacy
+	url = https://github.com/veldhub/veld_code__spacy.git
+[submodule "data/mara-nlp-suite-internal"]
+	path = data/mara-nlp-suite-internal
+	url = https://gitlab.oeaw.ac.at/acdh-ch/mara/mara-nlp-suite-internal.git
